<resources>
    <string name="app_name">VaultSec</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_create_new_user"><u>Not a member? Create an account.</u></string>

    <string name="master_password_password_hint">Master password</string>
    <string name="master_password_button_text">Unlock</string>
    <string name="master_password_message">Vault is currently locked.\nEnter the master password to unlock it.</string>

    <string name="registration_first_name_hint">First name</string>
    <string name="registration_last_name_hint">Last name</string>
    <string name="registration_email_hint">Email</string>
    <string name="registration_password_hint">Password</string>
    <string name="registration_password_retype_hint">Retype password</string>
    <string name="registration_button_text">Register</string>
    <string name="registration_existing_login"><u>Already a member? Login.</u></string>
    <string name="registration_password_helper_text">At least 10 characters long</string>
    <string name="registration_password_helper_text_retype">Passwords must match</string>

    <string name="error_no_internet_connection">No internet connection</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_first_name_required">First name is required</string>
    <string name="error_last_name_required">Last name is required</string>
    <string name="error_first_name_format">First name must only contain letters</string>
    <string name="error_first_name_length">First name is too long</string>
    <string name="error_name_first_letter">First letter has to be uppercase</string>
    <string name="error_last_name_length">Last name is too long</string>
    <string name="error_last_name_format">Invalid last name</string>
    <string name="error_email_format">Invalid email address</string>
    <string name="error_master_password_incorrect">Master password is incorrect</string>
    <string name="error_password_length_short">Must be at least 10 characters long</string>
    <string name="error_password_length_long">Password is too long</string>
    <string name="error_password_format">A stronger password is required</string>
    <string name="error_password_match">Passwords do not match</string>
    <string name="error_connection_timed_out">Could not connect to the server</string>
    <string name="error_connection_lost">Lost connection with the server</string>
    <string name="error_generic_connection">Something went wrong. Please try again</string>

    <string name="successful_registration">Account created successfully</string>
    <string name="successful_logout">Logged out successfully</string>

    <string name="title_notes_fragment">Notes</string>
    <string name="title_passwords_fragment">Passwords</string>
    <string name="title_cards_fragment">Cards</string>
    <string name="title_generator_fragment">Generator</string>

    <string name="title_logout_dropdown_menu">Logout</string>
    <string name="title_settings_dropdown_menu">Settings</string>
    <string name="title_search_menu_item">Search</string>
    <string name="title_sort_direction">Direction</string>
    <string name="title_sort_menu_item">Sort</string>
    <string name="title_sort_by_title_menu_item">Sort alphabetically</string>
    <string name="title_sort_by_created_menu_item">Sort by created date</string>
    <string name="title_sort_by_updated_menu_item">Sort by modified date</string>
    <string name="title_sort_by_color_menu_item">Sort by color</string>
    <string name="title_sort_by_font_size">Sort by font size</string>
    <string name="title_sort_by_category">Sort by category</string>
    <string name="title_sort_by_expiration_menu_item">Sort by expiration date</string>
    <string name="title_sort_by_type_menu_item">Sort by type</string>
    <string name="title_multi_select_delete">Delete selected</string>
    <string name="title_multi_select_all">Select all</string>
    <string name="add_edit_save">Save</string>
    <string name="add_edit_camera_menu">Camera</string>
    <string name="add_edit_edit_time_text">Edited %s</string>
    <string name="add_edit_title_hint">Title</string>

    <string name="add_edit_note_text_hint">Note</string>
    <string name="add_edit_note_customize">Font size and note color</string>
    <string name="new_note_fab_description">Add new note</string>
    <string name="add_edit_note_text_input_error">Text cannot be empty</string>
    <string name="add_note_confirmation">Note created</string>
    <string name="edit_note_confirmation">Note updated</string>
    <string name="notes_empty_text">There are no notes</string>
    <string name="notes_one_deleted">%d note deleted</string>
    <string name="notes_more_than_one_deleted">%d notes deleted</string>

    <string name="passwords_empty_text">There are no passwords</string>
    <string name="new_password_fab_description">Add new password</string>
    <string name="add_edit_password_url_select">URL</string>
    <string name="add_edit_password_login_hint">Login</string>
    <string name="add_edit_password_password_hint">Password</string>
    <string name="add_edit_password_category_hint">Category</string>
    <string name="add_password_confirmation">Password created</string>
    <string name="edit_password_confirmation">Password updated</string>
    <string name="add_edit_password_password_camera_description">Scan password</string>
    <string name="add_edit_password_login_camera_description">Scan login</string>
    <string name="add_edit_password_password_copy_description">Copy password</string>
    <string name="add_edit_password_login_copy_description">Copy login</string>
    <string name="add_edit_password_password_input_error">Password cannot be empty</string>
    <string name="password_card_view_category_text">Category: %s</string>
    <string name="passwords_one_deleted">%d password deleted</string>
    <string name="passwords_more_than_one_deleted">%d passwords deleted</string>
    <string name="add_edit_password_login_copied">Login copied to clipboard</string>
    <string name="add_edit_password_password_copied">Password copied to clipboard</string>

    <string name="cards_empty_text">There are no payment cards</string>
    <string name="new_card_fab_description">Add new password</string>
    <string name="cards_image_view_content_description">Card type</string>
    <string name="cards_one_deleted">%d card deleted</string>
    <string name="cards_more_than_one_deleted">%d cards deleted</string>
    <string name="add_edit_card_number_hint">Card number</string>
    <string name="add_edit_card_mm_hint">MM</string>
    <string name="add_edit_card_yy_hint">YY</string>
    <string name="add_edit_card_cvv_hint">CVV</string>
    <string name="add_edit_card_pin_hint">PIN</string>
    <string name="add_edit_card_number_camera_description">Scan card number</string>
    <string name="add_edit_card_number_copy_description">Copy card number</string>
    <string name="add_edit_card_expiration_copy_description">Copy expiration date</string>
    <string name="add_edit_card_cvv_copy_description">Copy CVV number</string>
    <string name="add_edit_card_pin_camera_description">Scan PIN</string>
    <string name="add_edit_card_pin_copy_description">Copy PIN</string>
    <string name="add_edit_card_type_description">Card type</string>
    <string name="add_payment_card_confirmation">Payment card created</string>
    <string name="edit_payment_card_confirmation">Payment card updated</string>
    <string name="add_edit_card_number_input_error_empty">Card number cannot be empty</string>
    <string name="add_edit_card_number_input_error_invalid">Card number is invalid</string>
    <string name="add_edit_card_expiration_input_error_invalid">Card expiration date is invalid</string>
    <string name="add_edit_card_cvv_input_error_empty">Card CVV cannot be empty</string>
    <string name="add_edit_card_cvv_input_error_invalid">Card CVV is invalid</string>
    <string name="add_edit_card_pin_input_error_empty">Card PIN cannot be empty</string>
    <string name="add_edit_card_pin_input_error_invalid">Card PIN is invalid</string>
    <string name="add_edit_card_number_copied">Card number copied to clipboard</string>
    <string name="add_edit_card_expiration_copied">Card expiration copied to clipboard</string>
    <string name="add_edit_card_cvv_copied">Card CVV to clipboard</string>
    <string name="add_edit_card_pin_copied">Card PIN copied to clipboard</string>

    <string name="camera_activity_shutter_description">Take a photo</string>
    <string name="camera_activity_flashlight_description">Flashlight control</string>
    <string name="add_edit_camera_permission_title">Camera required</string>
    <string name="add_edit_camera_permission_message">Camera permission is required in order to read the text</string>

    <string name="biometric_fingerprint_dialog_title">Fingerprint authentication</string>
    <string name="biometric_fingerprint_dialog_subtitle">Unlock the vault with your fingerprint</string>
    <string name="biometric_fingerprint_cancellation_signal">Authentication was cancelled</string>

</resources>
