<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <!-- To ignore the warning messages -->

    <group android:id="@+id/group_normal_password">
        <item
            android:id="@+id/item_search_pass"
            android:icon="@drawable/ic_baseline_search"
            android:title="@string/title_search_menu_item"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:iconTint="@color/color_black"
            app:showAsAction="always|collapseActionView" />

        <item
            android:icon="@drawable/ic_baseline_sort"
            android:title="@string/title_sort_menu_item"
            app:iconTint="@color/color_black"
            app:showAsAction="always">

            <menu>
                <item
                    android:id="@+id/item_sort_by_title_pass"
                    android:title="@string/title_sort_by_title_menu_item" />
                <item
                    android:id="@+id/item_sort_by_created_date_pass"
                    android:title="@string/title_sort_by_created_menu_item" />
                <item
                    android:id="@+id/item_sort_by_updated_date_pass"
                    android:title="@string/title_sort_by_updated_menu_item" />
                <item
                    android:id="@+id/item_sort_by_color_pass"
                    android:title="@string/title_sort_by_color_menu_item" />
                <item
                    android:id="@+id/item_sort_by_category_pass"
                    android:title="@string/title_sort_by_category" />
            </menu>

        </item>

        <item
            android:id="@+id/item_sort_direction_pass"
            android:icon="@drawable/ic_baseline_vertical_align_top"
            android:iconTint="@color/color_black"
            android:title="@string/title_sort_direction"
            app:showAsAction="always" />

        <item
            android:id="@+id/item_settings"
            android:title="@string/title_settings_dropdown_menu"
            app:showAsAction="never" />

        <item
            android:id="@+id/item_logout"
            android:title="@string/title_logout_dropdown_menu"
            app:showAsAction="never" />

    </group>

</menu>