<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_login_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:drawableBottom="@drawable/ic_launcher_foreground"
        android:drawablePadding="-24dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/app_name"
        android:textColor="@color/color_accent"
        android:textSize="56sp"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="104dp"
        android:layout_marginRight="48dp"
        android:autofillHints="@string/login_email_hint"
        android:backgroundTint="@color/color_accent"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_login_app_name" />

    <EditText
        android:id="@+id/edittext_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="48dp"
        android:autofillHints="@string/login_password_hint"
        android:backgroundTint="@color/color_accent"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_login_email" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="168dp"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:background="@color/color_primary"
        android:text="@string/login_button_text"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_login_password" />

    <TextView
        android:id="@+id/textview_login_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/login_create_new_user"
        android:textColor="@color/color_login_create_new_user"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>