<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegistrationFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_registration_firstname_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="48dp"
        android:textAlignment="center"
        app:boxStrokeColor="@color/color_accent"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/color_accent"
        app:hintTextColor="@color/color_accent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textfield_registration_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/registration_first_name_hint"
            android:hint="@string/registration_first_name_hint"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_registration_lastname_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="48dp"
        android:textAlignment="center"
        app:boxStrokeColor="@color/color_accent"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/color_accent"
        app:hintTextColor="@color/color_accent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textfield_registration_firstname_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textfield_registration_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/registration_last_name_hint"
            android:hint="@string/registration_last_name_hint"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_registration_email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="48dp"
        android:textAlignment="center"
        app:boxStrokeColor="@color/color_accent"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/color_accent"
        app:hintTextColor="@color/color_accent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textfield_registration_lastname_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textfield_registration_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/registration_email_hint"
            android:hint="@string/registration_email_hint"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_registration_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="48dp"
        android:textAlignment="center"
        app:boxStrokeColor="@color/color_accent"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/color_accent"
        app:errorEnabled="true"
        app:helperText="@string/registration_password_helper_text"
        app:helperTextEnabled="true"
        app:helperTextTextAppearance="@color/color_accent"
        app:helperTextTextColor="@color/color_accent"
        app:hintTextColor="@color/color_accent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textfield_registration_email_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textfield_registration_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/registration_password_hint"
            android:hint="@string/registration_password_hint"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_registration_password_retype_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="48dp"
        android:textAlignment="center"
        app:boxStrokeColor="@color/color_accent"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/color_accent"
        app:errorEnabled="true"
        app:helperText="@string/registration_password_helper_text_retype"
        app:helperTextEnabled="true"
        app:helperTextTextAppearance="@color/color_accent"
        app:helperTextTextColor="@color/color_accent"
        app:hintTextColor="@color/color_accent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textfield_registration_password_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textfield_registration_password_retype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/registration_password_retype_hint"
            android:hint="@string/registration_password_retype_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_registration"
        android:layout_width="168dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_rounded_corners"
        android:text="@string/registration_button_text"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textfield_registration_password_retype_layout" />

    <TextView
        android:id="@+id/textview_registration_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_existing_login"
        android:textColor="@color/color_login_create_new_user"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_registration"
        app:layout_constraintVertical_bias="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>